--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ button {
  margin: 10px;
 }
 
-#servant-button {
+#coffee-button {
  font-weight: 800;
  color: #382b22;
  padding: 1em 1.15em;
@@ -24,7 +24,7 @@ button {
  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
 }
 
-#servant-button::before {
+#coffee-button::before {
  position: absolute;
  content: '';
  width: 100%;
@@ -42,26 +42,26 @@ button {
  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
 }
 
-#servant-button:hover {
+#coffee-button:hover {
  background: #ffe9e9;
  -webkit-transform: translate(0, 0.25em);
  transform: translate(0, 0.25em);
 }
 
-#servant-button:hover::before {
+#coffee-button:hover::before {
  -webkit-box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffc28a;
  box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffc28a;
  -webkit-transform: translate3d(0, 0.5em, -1em);
  transform: translate3d(0, 0.5em, -1em);
 }
 
-#servant-button:active {
+#coffee-button:active {
  background: #ffe9e9;
  -webkit-transform: translate(0em, 0.75em);
  transform: translate(0em, 0.75em);
 }
 
-#servant-button:active::before {
+#coffee-button:active::before {
  -webkit-box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
  box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
  -webkit-transform: translate3d(0, 0, -1em);
