--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,15 @@ body {
 
 #root {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  flex-direction: column;
   height: 100vh;
   background-color: #ffd2a8;
+}
+
+div {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
